docs/wemake-python-styleguide/0.15.2/violations/complexity/WPS203.md
---
code: 203
internalName: TooManyImportedNamesViolation
relatedConfigurationParameter:
- python://wemake_python_styleguide.options.defaults.MAX_IMPORTED_NAMES
title: 'Found module with too many imported names: _'
---

{% import "macros.html" as macros with context %}

Forbid modules with too many imported names.

Namespaces are one honking great idea -- let's do more of those\!

  - Reasoning:  
    Having too many imported names without prefixes is quite expensive.
    You have to memorize all the source locations of the imports and
    sometimes it is hard to remember what kind of functions and classes
    are already injected into your context.
    
    It is also a questionable design if a single module has a lot of
    imports. Why would a single module have so many dependencies? So,
    the module becomes too coupled.

  - Solution:  
    Refactor the imports to import a common namespace. Something like
    `from package import module` and then use it like
    `module.function()`.
    
    Or refactor your code and split the complex module into several
    modules.

Example:

    # Correct:
    import module  # 1 imported name
    
    # Wrong:
    from module import func1, func2, ..., funcN  # N imported names

We do not make any differences between `import` and `from ... import
...`.

  - Configuration:  
    This rule is configurable with `--max-imported-names`. Default:
    {{ macros.wps_config('python://wemake_python_styleguide.options.defaults.MAX_IMPORTED_NAMES') }}

<div class="versionadded">

0.12.0

</div>